improve architecture organization and add TransportStrategy